Initial Commit for Testing

--- a/index.html
+++ b/index.html
@@ -1,8 +1,118 @@
 <!DOCTYPE html>
+
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
 <html>
-<body>
-<h1>Hello World</h1>
-<p>Ekrizdis</p>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
+
+    <head>
+
+        <title>Ekrizdis</title>
+        <link rel="icon" type="image/x-icon" href=".\pics\favicon.png">
+        <link rel="stylesheet" href=".\style.css">
+        <link rel="stylesheet" href=".\hello.css">
+        <link rel="stylesheet" href=".\resume.css">
+        <link rel="script" href=".\script.js">
+
+    </head>
+
+    <body>
+
+        <div id="header">
+            <img class="icon" id="avatar" src=".\pics\avatar.png">
+            <div style="width: 100%;"></div>
+            <img class="icon" id="computer" src=".\pics\computer.png">
+        </div>
+
+        <div id="body">
+
+            <div class="hello">
+                <div id="hello">
+                    <div id="hello-t">
+                        <h1>Hello</h1>
+                        <h2>My name is</h2>
+                    </div>
+                    <div id="hello-p">Matthew Newton</div>
+                    <div id="hello-b"></div>
+                </div>
+                <p id="hello-text">
+                    I am a <b>Sr. IT Systems Engineer</b> with a passion for computers, code, & automation.
+                </p>
+            </div>
+
+            <div id="resume">
+                <div id="portrait">
+                    <img id="me" src=".\pics\me.jpg">
+                </div>
+                <div id="info">
+                    <img class="wizard" src=".\pics\wizard.png" style="-webkit-transform: scaleX(-1);transform: scaleX(-1);">
+                    <div id="character">
+                        <div id="bio">Human | Wizard | Level 7</div>
+                        <div id="email">matt@neverwinternerd.com</div>
+                        <div id="location">Granite Falls, WA</div>
+                    </div>
+                    <img class="wizard" src=".\pics\wizard.png">
+                </div>
+                <div id="stats">
+                    <div class="stat">
+                        <div class="stat-name">Name</div>
+                        <div class="stat-value">15</div>
+                        <div class="stat-bonus">+1</div>
+                    </div>
+                    <div class="stat">
+                        <div class="stat-name">Name</div>
+                        <div class="stat-value">15</div>
+                        <div class="stat-bonus">+1</div>
+                    </div>
+                    <div class="stat">
+                        <div class="stat-name">Name</div>
+                        <div class="stat-value">15</div>
+                        <div class="stat-bonus">+1</div>
+                    </div>
+                    <div class="stat">
+                        <div class="stat-name">Name</div>
+                        <div class="stat-value">15</div>
+                        <div class="stat-bonus">+1</div>
+                    </div>
+                    <div class="stat">
+                        <div class="stat-name">Name</div>
+                        <div class="stat-value">15</div>
+                        <div class="stat-bonus">+1</div>
+                    </div>
+                    <div class="stat">
+                        <div class="stat-name">Name</div>
+                        <div class="stat-value">15</div>
+                        <div class="stat-bonus">+1</div>
+                    </div>
+                </div>
+                <div id="schools">
+                    <div class="school">
+                        <div class="school-img">
+
+                        </div>
+                        <div class="school-info">
+                            <div class="school-name">Park University</div>
+                            <div class="school-degree">B.S Computer Science</div>
+                        </div>
+                    </div>
+                    <div class="school">
+                        <div class="school-img">
+
+                        </div>
+                        <div class="school-info">
+                            <div class="school-name">Park University</div>
+                            <div class="school-degree">B.S Computer Science</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+        
+        <div id="footer">
+            <img class="icon" src=".\pics\links\github.png">
+            <img class="icon" src=".\pics\links\linkedin.png">
+        </div>
+
+    </body>
+
 </html>
