--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
         
         <div id="footer">
             <a href="https://www.github.com/Ekrizdis367?tab=repositories" class="icon"><img class="icon" src=".\pics\links\github.png"></a>
-            <a href="https://wwww.linkedin.com/in/matthew-newton-955603126" class="icon"><img class="icon" src=".\pics\links\linkedin.png"></a>
+            <a href="https://www.linkedin.com/in/matthew-newton-955603126" class="icon"><img class="icon" src=".\pics\links\linkedin.png"></a>
         </div>
 
     </body>
