Fixing broken images

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                     <img class="app" src=".\pics\apps\Cohesity.png">
                     <img class="app" src=".\pics\apps\crowdstrike.png">
                     <img class="app" src=".\pics\apps\Dell.png">
-                    <img class="app" src=".\pics\apps\Druva.png">
+                    <img class="app" src=".\pics\apps\druva.png">
                     <img class="app" src=".\pics\apps\FreshService.png">
                     <img class="app" src=".\pics\apps\Github.png">
                     <img class="app" src=".\pics\apps\HP.png">
@@ -153,7 +153,7 @@
                     <img class="app" src=".\pics\apps\Python.png">
                     <img class="app" src=".\pics\apps\SailPoint.png">
                     <img class="app" src=".\pics\apps\SolarWinds.png">
-                    <img class="app" src=".\pics\apps\Synology.png">
+                    <img class="app" src=".\pics\apps\synology.png">
                     <img class="app" src=".\pics\apps\Tanium.png">
                     <img class="app" src=".\pics\apps\vscode.png">
                     <img class="app" src=".\pics\apps\VMWare.png">
